Use virtual threads for HTTP server executor
Replaced the cached thread pool with a virtual thread-per-task executor to improve resource efficiency and scalability. This change leverages modern concurrency mechanisms for better performance with high loads.